# chrysalis-core

./: README.md
contracts/chrysalis/: Cargo.toml
contracts/chrysalis/src/: contract_interface.rs  lib.rs  test.rs  testold.rs
contracts/chrysalis/test_snapshots/test/: test_claim.1.json  test_stake_eth.1.json  test_stake_eth.2.json  test_unstake_eth.1.json  test_unstake_eth.2.json  test_vclaim.1.json
contracts/chrysalis/test_snapshots/testold/: test_initialize_contract.1.json
