[package]
name = "chrysalis"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.6.0" }

[dev-dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true